# git-retry

./: CMakeLists.txt  README.md  git-retry  git_retry.py  python_runner.sh
man/html/: git-retry.html
man/man1/: git-retry.1
